[package]
name = "mapvas"
readme = "README.md"
description = "A map viewer with drawing functionality"
version = "0.2.1"
authors = ["Udo Hoffmann <hoffmann.odu@gmail.com>"]
edition = "2024"
keywords = ["map", "openstreetmap", "drawing"]
homepage = "https://github.com/UdHo/mapvas"
repository = "https://github.com/UdHo/mapvas.git"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
image = "0.25.6"
itertools = "0.14.0"
log = "0.4.27"
rayon = "1.8.0"
serde = "1.0.219"
surf = "2.3.2"
thiserror = "2.0.12"
tokio = {version = "1.44.1", features = ["full"]}
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
tower-http = {version = "0.6.2", features = ["trace"]}
tracing = "0.1.41"
serde_json = "1.0.140"
env_logger = "0.11.7"
regex = "1.11.1"
rand = "0.9.0"
clap = {version ="4.5.34", features=["derive"]}
arboard = "3.4.1"
surf-governor = "0.2.0"
chrono = "0.4.40"
egui ={version =  "0.31.1", features = ["serde"]}
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
assert_approx_eq = "1.1.0"
async-std = "1.13.1"
flexpolyline = "1.0.0"
polyline = "0.11.0"
lazy_static = "1.5.0"
dirs = "6.0.0"

[lints.clippy]
pedantic = {level = "warn", priority = -1}
module_name_repetitions = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
