[package]
name = "mapvas"
readme = "README.md"
description = "A map viewer with drawing functionality"
version = "0.2.6"
authors = ["Udo Hoffmann <hoffmann.odu@gmail.com>"]
edition = "2024"
keywords = ["map", "openstreetmap", "drawing"]
homepage = "https://github.com/UdHo/mapvas"
repository = "https://github.com/UdHo/mapvas.git"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
image = "0.25.6"
itertools = "0.14.0"
log = "0.4.27"
rayon = "1.8.0"
serde = "1.0.219"
surf = "2.3.2"
thiserror = "2.0.12"
tokio = {version = "1.46.1", features = ["full"]}
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
tower-http = {version = "0.6.6", features = ["trace"]}
tracing = "0.1.41"
serde_json = "1.0.141"
env_logger = "0.11.8"
regex = "1.11.1"
rand = "0.9.2"
clap = {version ="4.5.41", features=["derive"]}
arboard = "3.6.0"
surf-governor = "0.2.0"
chrono = { version = "0.4.41", features = ["serde"] }
egui ={version =  "0.32.0", features = ["serde","bytemuck"]}
eframe = "0.32.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
puffin = { version = "0.19", optional = true }
puffin_egui = { version = "0.29", optional = true }
puffin_http = { version = "0.16", optional = true }
assert_approx_eq = "1.1.0"
async-std = "1.13.1"
flexpolyline = "1.0.0"
polyline = "0.11.0"
lazy_static = "1.5.0"
dirs = "6.0.0"
once_cell = "1.21.3"
async-trait = "0.1.84"
urlencoding = "2.1.3"
kml = "0.11.0"
gpx = "0.10.0"
geo-types = "0.7.15"

[features]
default = []
profiling = ["puffin", "puffin_egui", "puffin_http"]

[dev-dependencies]
tiny-skia = "0.11"
egui_kittest = { version = "0.32", features = ["snapshot", "wgpu"] }
wgpu = "25.0"
futures = "0.3"

[lints.clippy]
pedantic = {level = "warn", priority = -1}
module_name_repetitions = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
